[package]
name = "jenkinsctl"
version = "0.4.0"
description = "Jenkins management tool"
readme = "README.md"
license = "GPL-2.0-or-later"
repository = "https://github.com/enkron/jenkinsctl"
authors = ["Sergei Belokon srj.belokon@gmail.com"]
keywords = ["jenkins", "jenkinsctl"]
edition = "2021"
rust-version = "1.65"

[dependencies]
async-recursion = "1.0.4"
base64 = "0.21.2"
bytes = "1.4.0"
clap = { version = "4.3.2", features = ["derive"] }
colored = "2.0.4"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-tls = "0.6.0"
log = "0.4.19"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.2"
